infra/ui/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: aurum-dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.aurum.localtest.me`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
